--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ textarea {
     width: 10rem;
     margin: 0;
     padding: 20px 0;
-    background-color: #eee;
+    background-color: #ccc;
     border-radius: 5px;
     box-shadow: 2px 0 2px 0 rgba(51, 51, 51, 0.1);
     font-weight: bold;  
