--- a/styles/tableStyles.css
+++ b/styles/tableStyles.css
@@ -29,6 +29,7 @@ td {
     width: 25px;
     text-align: center;
     border: 1px solid black;
+    font-size: 11px;
 }
 .days{
     position: relative;
@@ -36,6 +37,8 @@ td {
     width: 30px;
     border: 1px solid black;
     background-color: whitesmoke;
+    font-size: 12px;
+
 }
 
 .xMas-tree {
@@ -47,23 +50,23 @@ td {
 }
 
 .lbw {
-border-right: 1px solid red;
+    border-right: 1px solid red;
 }
 
 .fbm {
-border-left: 1px solid red;
+    border-left: 1px solid red;
 
 }
 
 .winning {
-color: blue;
-text-align: center;
-font-size: 23px;
+    color: blue;
+    text-align: center;
+    font-size: 20px;
 }
 .machine {
-color: red;
-text-align: center;
-font-size: 23px;
+    color: red;
+    text-align: center;
+    font-size: 20px;
 }
 
 
@@ -109,14 +112,14 @@ font-size: 23px;
         
         table {
             width: 400px;
-            margin-block-start: 30px;
+            margin-block-start: 40px;
         }
-        .year {
+        /* .year {
             font-weight: bold;
             font-size: 17px;
-        }
+        } */
         .serial-num {
-            width: 30px;
+            width: 20px;
         }
         .days {
             width: 10px;
@@ -143,7 +146,7 @@ font-size: 23px;
             font-size: 16px;
         }
         .serial-num {
-            width: 30px;
+            width: 15px;
         }
         .winning,
         .machine {
@@ -172,7 +175,7 @@ font-size: 23px;
         }
         .winning,
         .machine {
-            font-size: 18px;
+            font-size: 15px;
         }  
     }
   
