--- a/style.css
+++ b/style.css
@@ -294,10 +294,12 @@ textarea {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 5rem 2% auto;
-    background-color: #0000008a;
     width: 100%;
     height: 100%;
+    padding-top: 30px;
+    margin: 5rem 2% auto;
+    background-color: #0000008a;
+   
   }
   .game-link  {
     flex-direction: column;
