--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   font-size: 16px;
   border-bottom: 1px solid #ccc;
   display: flex;
+  text-align: center;
   justify-content: space-between;
   align-items: center;
 }
