--- a/style.css
+++ b/style.css
@@ -161,6 +161,10 @@
   margin: 20px 0 auto;
   font-size: 16px;
 }
+.server-error {
+  color: orange;
+  font-weight: 500;
+}
 
 .home-page-main {
   display: flex;
