--- a/style.css
+++ b/style.css
@@ -73,11 +73,12 @@
 
 /* ~ ~ Dynamic nav link in Nav-link ~ ~ */
 .active {
-  color: #2282c7;
+  color: #fff;
   text-decoration: none;
-  padding-right: 10px;
+  padding-right: 20px;
   margin: auto 10px;
-  border-right: 1px solid #2282c7;
+  background-color: #2282c7;
+  font-size: 2.5rem;
 }
 
 .counterpart {
@@ -137,10 +138,7 @@
   margin: 20px 0 auto;
   font-size: 16px;
 }
-.server-error {
-  color: orange;
-  font-weight: 500;
-}
+
 
 .home-page-main {
   display: flex;
