--- a/style.css
+++ b/style.css
@@ -165,8 +165,10 @@
 }
 
 .update-meta small {
+  color: #000;
   display: block;
   margin-bottom: 0.5rem;
+  font-size: 40px;
 }
 
 .update-meta strong {
