--- a/style.css
+++ b/style.css
@@ -282,6 +282,11 @@ textarea {
       margin: 20px auto; 
       font-size: 22px;
   }
+
+  .update-meta {
+    /* padding: auto; */
+    margin: auto auto 0;
+  } 
   .subnav {
     position: unset;
     width: 100%;
@@ -305,7 +310,7 @@ textarea {
    }
   .counterpart-icon {
     display: block;
-    margin-top: auto 0;
+    margin: auto 0;
 }
   .counterpart:hover {
     background-color: unset;
@@ -319,7 +324,7 @@ textarea {
     width: 100%;
     height: 100%;
     padding-top: 30px;
-    margin: 5rem 2% auto;
+    margin: 2rem 2% auto;
     background-color: #0000008a;
   }
   .game-link  {
