add new subnav to tuesday games

--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@
   text-decoration: none;
 }
 
+ /* ~ ~ Dynamic nav link in Nav-link ~ ~ */
+ .each-game-active-wrapper {
+    display: flex;
+    overflow-x: scroll;
+    gap: 10px;
+  } /* ~ ~ Dynamic nav link in Nav-link ~ ~ */
 
 .subnav {
   position: fixed;
@@ -273,7 +279,6 @@ textarea {
   }
 
   .update-meta {
-    /* padding: auto; */
     margin: auto auto 0;
   } 
   .subnav {
@@ -285,29 +290,6 @@ textarea {
     background-image: url("https://i.postimg.cc/PqMJr2bW/Visual-Lotto-Board-1.png");
     order: 1;
   }
-
-  /* ~ ~ Dynamic nav link in Nav-link ~ ~ */
- .each-game-active-wrapper {
-    display: flex;
-    overflow-x: scroll;
-    gap: 10px;
-
-  }
-  /* .each-game-active-wrapper .active {
-    position: sticky;
-    top: 10%;
-    left: 0; 
-    right: 0; 
-    text-transform: uppercase;
-    margin: 25px 0 20px;
-    
-  text-decoration: none;
-  padding: 0 10px;
-  color: #2282c7;
-    font-size: 2rem;
-    box-shadow: 2px 2px 4px 2px #eee;
-    order: 1;
-  }  */
 
   .subnav::-webkit-scrollbar {
     width: 6px;
