--- a/style.css
+++ b/style.css
@@ -90,6 +90,14 @@
   display: none;
 }
 
+.frequent-number {
+  color: #add8e6;
+  padding: 5px 10px;
+  margin: 10px auto;
+  background-color: #222;
+
+}
+
  .game-links-wrapper {
     display: flex;
     flex-direction: column;
