--- a/style.css
+++ b/style.css
@@ -43,6 +43,17 @@
   background: #004c99;
 }
 
+.green-lotto-link {
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  background-color: green;
+  padding: 8px;
+  border-radius: 6px;
+  box-shadow: 2px 0 2px 0 rgb(146, 146, 146);
+  font-weight: bold;
+}
+
 
 .socials a {
   color: #fff;
