--- a/style.css
+++ b/style.css
@@ -350,12 +350,18 @@ textarea {
 /* On small screens: subnav takes over */
 @media (max-width: 768px) {
   body {
-    display: flex;
-    flex-direction: column;
+    display: block;
+    /* background-color: #daa520; */
+    margin: 0;
+    padding: 0;
+    /* flex-direction: column; */
   }
   .home-page-header {
     flex-direction: column;
     margin-bottom: 0;
+    margin-top: 0;
+    /* background-color: #2a2a2a; */
+    
   }
   .actions {
     display: flex;
@@ -386,9 +392,7 @@ textarea {
     width: 100%;
     height: 100%;
     margin: 0;
-    overflow: auto;
     background-image: url("https://i.postimg.cc/PqMJr2bW/Visual-Lotto-Board-1.png");
-    order: 1;
   }
 
   .subnav::-webkit-scrollbar {
@@ -397,22 +401,15 @@ textarea {
   .subnav::-webkit-scrollbar-thumb {
     border-radius: 3px;
   }
-  .counterpart.counterpart {
-    all: unset;
-    order: 1;
-  }
-  .counterpart p {
+  .counterpart.counterpart,
+  .download-btn,
+  .counterpart-icon,
+  .counterpart p,
+  .home-page-main {
     display: none;
-   }
-  .counterpart-icon {
-    display: block;
-    margin: auto 0;
-}
-  .counterpart:hover {
-    background-color: unset;
-    all: unset;
-   
+  
   }
+ 
   .game-links-wrapper {
     flex-direction: row;
     flex-wrap: wrap;
@@ -420,8 +417,10 @@ textarea {
     width: 100%;
     height: 100%;
     padding-top: 30px;
-    margin: 2rem 2% auto;
+    /* margin: 2rem 2% auto; */
     background-color: #0000008a;
+    /* background-color: #ff0000; */
+    
   }
   .game-link  {
     flex-direction: column;
